# x1-algol-compiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  algol-encoding.txt  appendix-b.a60  hello.a60  restrop.pl  test-utf8-input.pas  x1algc.c  x1algol.pas
.github/workflows/: c-cpp.yml
compiler/: CMakeLists.txt  Makefile  x1algc.c  x1algol.pas
disasm/: decode.pl
doc/: algol-encoding.md  algol-encoding.txt  instruction-encoding.md  library-procedures.md  pords-and-pards.md
examples/: README.md  appendix-b.a60  beer.a60  bulls_and_cows.a60  bulls_and_cows.sh  disarium.a60  encoding.a60  even.a60  even.lib  ex1.a60  ex1.opc  ex2.a60  ex3.a60  ex3.opc  ex4.a60  ex4.opc  fixt.lib  flot.lib  game_of_life.a60  hanoi.a60  hello.a60  lisp.a60  lisp.md  lisp.sh  magic_square.a60  man_or_boy.a60  mersenne.a60  outer-planets.a60  outer-planets.sh  outer_planets.a60  outer_planets.md  outer_planets.sh  palindromic_primes.a60  pentomino.a60  pentomino.md  pentomino.sh  pentomino3x20.sh  pentomino4x15.sh  pentomino5x12.sh  pentomino6x10.sh  (+16 more)
misc/: Makefile  even.5tr  even.src  objfile.cc  printtext.src  sum.src  utf8-input.txt  x1-disasm.py
scripts/: decode.pl  underline.pl
simulator/: CMakeLists.txt  byte_pointer.h  compile.cpp  encoding.cpp  encoding.h  input.cpp  machine.cpp  machine.h  main.cpp  opc.h  opcodes.cpp  processor.cpp  processor.h  trace.cpp  virtual_stack.cpp  virtual_stack.h  x1_arch.cpp  x1_arch.h
tests/: CMakeLists.txt  arch_test.cpp  arith_test.cpp  array_test.cpp  boolean_test.cpp  cli_test.cpp  fixture.cpp  fixture.h  function_test.cpp  label_test.cpp  loop_test.cpp  machine_test.cpp  man_or_boy.cpp  print123.a60  print123.x1  print_test.cpp  procedure_test.cpp
